[gd_scene load_steps=49 format=2]

[ext_resource path="res://Heritage/Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://States/DrawState.gd" type="Script" id=2]
[ext_resource path="res://Shaders/Hurt.gdshader" type="Shader" id=3]
[ext_resource path="res://Son/zombi_mort.ogg" type="AudioStream" id=4]
[ext_resource path="res://Son/reload.ogg" type="AudioStream" id=5]
[ext_resource path="res://Import/Graph/Actor/PNG/Sergent-sheet.png" type="Texture" id=6]
[ext_resource path="res://Son/luger_shot.ogg" type="AudioStream" id=7]
[ext_resource path="res://Scene/Sergent/Sergent.gd" type="Script" id=8]
[ext_resource path="res://Son/zombi_possédé_mort.ogg" type="AudioStream" id=9]
[ext_resource path="res://Son/zombi_possédé.ogg" type="AudioStream" id=10]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 3 )
shader_param/flash_color = Color( 1, 1, 1, 0.8 )
shader_param/opacity = 0.0

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 6 )
region = Rect2( 0, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 6 )
region = Rect2( 48, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 6 )
region = Rect2( 96, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 6 )
region = Rect2( 144, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 6 )
region = Rect2( 0, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 6 )
region = Rect2( 48, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 6 )
region = Rect2( 96, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 6 )
region = Rect2( 144, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 6 )
region = Rect2( 192, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 6 )
region = Rect2( 240, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 6 )
region = Rect2( 288, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 6 )
region = Rect2( 336, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 6 )
region = Rect2( 48, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 6 )
region = Rect2( 96, 240, 48, 48 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 6 )
region = Rect2( 48, 240, 48, 48 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 6 )
region = Rect2( 0, 240, 48, 48 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 6 )
region = Rect2( 144, 240, 48, 48 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 6 )
region = Rect2( 0, 192, 48, 48 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 6 )
region = Rect2( 48, 192, 48, 48 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 6 )
region = Rect2( 96, 192, 48, 48 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 6 )
region = Rect2( 144, 192, 48, 48 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 6 )
region = Rect2( 192, 192, 48, 48 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 6 )
region = Rect2( 240, 192, 48, 48 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 6 )
region = Rect2( 288, 192, 48, 48 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 6 )
region = Rect2( 336, 192, 48, 48 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 6 )
region = Rect2( 384, 192, 48, 48 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 6 )
region = Rect2( 0, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 6 )
region = Rect2( 48, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 6 )
region = Rect2( 96, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 6 )
region = Rect2( 144, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 6 )
region = Rect2( 192, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 6 )
region = Rect2( 0, 288, 48, 48 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 6 )
region = Rect2( 48, 288, 48, 48 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 6 )
region = Rect2( 96, 288, 48, 48 )

[sub_resource type="SpriteFrames" id=36]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "Move",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": false,
"name": "Spawn",
"speed": 5.0
}, {
"frames": [ SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 33 ), SubResource( 32 ), SubResource( 35 ) ],
"loop": false,
"name": "Draw",
"speed": 5.0
}, {
"frames": [ SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), null ],
"loop": false,
"name": "Die",
"speed": 5.0
}, {
"frames": [ SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ) ],
"loop": false,
"name": "Hurt",
"speed": 8.0
}, {
"frames": [ SubResource( 15 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 16 ), SubResource( 15 ) ],
"loop": false,
"name": "Attack",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=37]
radius = 8.0
height = 9.0

[sub_resource type="CircleShape2D" id=38]
radius = 200.0

[node name="Sergent" groups=["ENEMIES"] instance=ExtResource( 1 )]
collision_layer = 2
collision_mask = 27
script = ExtResource( 8 )
speed = 60
damage = 1

[node name="AnimatedSprite" parent="." index="1"]
material = SubResource( 1 )
frames = SubResource( 36 )
animation = "Attack"
frame = 2

[node name="SelfHitBox" parent="." index="2"]
position = Vector2( -0.5, 0.5 )
shape = SubResource( 37 )

[node name="Attack" type="AudioStreamPlayer2D" parent="SoundBox" index="0"]
stream = ExtResource( 7 )
max_distance = 500.0

[node name="Reload" type="AudioStreamPlayer2D" parent="SoundBox" index="1"]
stream = ExtResource( 5 )
volume_db = -20.0
pitch_scale = 0.5
max_distance = 300.0

[node name="Hurt" type="AudioStreamPlayer2D" parent="SoundBox" index="2"]
stream = ExtResource( 4 )
pitch_scale = 2.0
max_distance = 300.0

[node name="Die" type="AudioStreamPlayer2D" parent="SoundBox" index="3"]
stream = ExtResource( 9 )
volume_db = 10.0
max_distance = 400.0

[node name="Draw" type="Node" parent="StateMachine" index="5"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas/AttackArea" index="0"]
shape = SubResource( 38 )

[node name="InstancePoints" type="Node2D" parent="." index="8"]
position = Vector2( 0, 9 )

[node name="BulletPoint" type="Node2D" parent="InstancePoints" index="0"]
position = Vector2( 26, 0 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="." index="9"]
stream = ExtResource( 10 )
volume_db = 1.0
autoplay = true
max_distance = 500.0
